--- a/i18n/de/docusaurus-plugin-content-docs/current/02.install/index.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/02.install/index.mdx
@@ -2,30 +2,30 @@ import Link from '@docusaurus/Link';
 
 # Choose your selfhosting method and providers
 
-You can host yourself at home (on a small computer), or on a remote server. Each solution has their pros and cons:
+Sie können zu Hause (auf einem kleinen Computer) oder auf einem Remote-Server hosten. Jede Lösung hat ihre Vor- und Nachteile:
 
-## At home, for instance on an ARM board or an old computer
+### Zu Hause, zum Beispiel auf einem Einplatinencomputer oder einem alten Computer
 
-You can host yourself at home with an ARM board or a re-purposed regular computer, connected to your home router/box.
+Sie können zu Hause mit einem Einplatinencomputer oder einem überarbeiteten regulären Computer, der mit Ihrem Heimrouter verbunden ist, hosten.
 
-- **Pros**  : you will have physical control of the machine and only need to buy the hardware;
-- **Cons**  : you will have to [manually configure your internet box](/install/post_install/isp_box_config) and [might be limited by your ISP](/install/providers/isp/).
+- **Pros**  : Sie haben die physische Kontrolle über die Maschine und müssen nur die Hardware kaufen;
+- **Cons**  : Sie müssen [Ihre Internet-Router manuell konfigurieren](/install/post_install/isp_box_config) und [sind möglicherweise von Ihrem Internet-Service-Provider eingeschränkt](/install/providers/isp/).
 
-## At home, behind a VPN
+### Zu Hause hinter einem VPN
 
-A VPN is an encrypted tunnel between two machines. In practice, it makes it "as if" you were directly, locally, connected to your server machine, but actually from somewhere else on the Internet. This allows you to still host yourself at home, while bypassing possible limitations of your ISP. See also [the Internet Cube project](https://internetcu.be/) and [the FFDN](https://www.ffdn.org/).
+Ein VPN ist ein verschlüsselter Tunnel zwischen zwei Computern. In der Praxis sieht es so aus, als ob Sie direkt vor Ort mit Ihrem Server verbunden wären, aber tatsächlich verbinden Sie sich von einem anderen Ort im Internet. Auf diese Weise können Sie weiterhin zu Hause hosten und gleichzeitig mögliche Einschränkungen Ihres Internetdienstanbieters umgehen. Siehe auch [das Internet Cube-Projekt](https://internetcu.be/) und [der FFDN](https://www.ffdn.org/).
 
-- **Pros**: you will have physical control of the machine, and the VPN hides your traffic from your ISP and allows you to bypass its limitations;
-- **Cons**: you will have to pay a monthly subscription for the VPN.
+- **Pros** : Sie haben die physische Kontrolle über den Computer, und das VPN verbirgt Ihren Datenverkehr vor Ihrem ISP und ermöglicht es Ihnen, seine Einschränkungen zu umgehen;
+- **Cons** : Sie müssen ein monatliches Abonnement für das VPN bezahlen.
 
-## On a remote server (VPS or dedicated server)
+### Auf einem Remote-Server (VPS oder dedizierter Server)
 
-You can rent a virtual private server or a dedicated machine from [associative](https://db.ffdn.org/) or [commercial](/install/providers/servers) "Cloud" providers.
+Sie können einen virtuellen privaten Server oder eine dedizierte Maschine von [associative](https://db.ffdn.org/) oder von anderen [kommerziellen](/providers/server) "Cloud"-Anbietern mieten.
 
-- **Pros**: your server and its internet connectivity will be fast;
-- **Cons**: you will have to pay a monthly subscription and won't have physical control of your server.
+- **Pros** : Ihr Server und seine Internetverbindung sind schnell;
+- **Cons** : Sie müssen ein monatliches Abonnement bezahlen und haben keine physische Kontrolle über Ihren Server.
 
-## Summary
+### Summary
 
 export const styleNone = {
   textAlign: 'center',
