--- a/i18n/es/docusaurus-plugin-content-docs/current/02.install/index.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/02.install/index.mdx
@@ -2,30 +2,30 @@ import Link from '@docusaurus/Link';
 
 # Choose your selfhosting method and providers
 
-You can host yourself at home (on a small computer), or on a remote server. Each solution has their pros and cons:
+Puedes autohospedarte desde tu casa (desde un pequeño ordenador), o desde un servidor remoto. Cada solución tiene sus ventajas e inconvenientes:
 
-## At home, for instance on an ARM board or an old computer
+### En casa, por ejemplo con una tarjeta ARM o un ordenador antiguo
 
-You can host yourself at home with an ARM board or a re-purposed regular computer, connected to your home router/box.
+Puedes autoalojarte en casa, desde una tarjeta ARM o un viejo ordenador conectado a tu internet.
 
-- **Pros**  : you will have physical control of the machine and only need to buy the hardware;
-- **Cons**  : you will have to [manually configure your internet box](/install/post_install/isp_box_config) and [might be limited by your ISP](/install/providers/isp/).
+- **Ventajas**: Tienes el control físico de la máquina y solo tienes que conseguir el hardware inicial.
+- **Desventajas**: Probablemente necesitas [configurer manualmente tu router](/install/post_install/isp_box_config) y puede que [tu operador de internet te limite](/install/providers/isp/).
 
-## At home, behind a VPN
+### En casa, pasando por una VPN
 
-A VPN is an encrypted tunnel between two machines. In practice, it makes it "as if" you were directly, locally, connected to your server machine, but actually from somewhere else on the Internet. This allows you to still host yourself at home, while bypassing possible limitations of your ISP. See also [the Internet Cube project](https://internetcu.be/) and [the FFDN](https://www.ffdn.org/).
+Una VPN es un tunel encriptado entre dos máquinas. En la práctica, permite hacer como si una máquina estuviera en otro lugar. Esto permite el autoalojamiento evitando limitaciones de los proveedores de internet. Puedes echar un ojo a [el proyecto InternetCu.Be](https://internetcu.be/) y la [Federación FFDN (Federación de operadores de acceso a internet asociativos)](https://www.ffdn.org/en).
 
-- **Pros**: you will have physical control of the machine, and the VPN hides your traffic from your ISP and allows you to bypass its limitations;
-- **Cons**: you will have to pay a monthly subscription for the VPN.
+- **Ventajas** : Tienes el control físico de la máquina y la VPN permite ocultarte del rastro de tu operador de internet, y esquivar limitaciones.
+- **Desventajas** : Las VPN suelen ser de pago, y tendrás que costearla mensualmente.
 
-## On a remote server (VPS or dedicated server)
+### En un servidor remoto (VPS o servidor dedicado)
 
-You can rent a virtual private server or a dedicated machine from [associative](https://db.ffdn.org/) or [commercial](/install/providers/servers) "Cloud" providers.
+Puedes alquilar un servidor privado virtual (VPS) o una máquina dedicada a alojamientos [asociativos](https://db.ffdn.org/) o [comerciales](/providers/server).
 
-- **Pros**: your server and its internet connectivity will be fast;
-- **Cons**: you will have to pay a monthly subscription and won't have physical control of your server.
+- **Ventajas**: Tu servidor será rápido y su conexión veloz.
+- **Desventajas**: Ocasiona un gasto mensual por la máquina, y no tienes control físico.
 
-## Summary
+### Resumen
 
 export const styleNone = {
   textAlign: 'center',
