--- a/i18n/it/docusaurus-plugin-content-docs/current/02.install/index.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/02.install/index.mdx
@@ -2,30 +2,30 @@ import Link from '@docusaurus/Link';
 
 # Choose your selfhosting method and providers
 
-You can host yourself at home (on a small computer), or on a remote server. Each solution has their pros and cons:
+Puoi fare self-hosting in casa (su un piccolo computer), o su un server remoto. Ogni soluzione ha i suoi pro e i suoi contro:
 
-## At home, for instance on an ARM board or an old computer
+### In casa, per esempio con una scheda ARM o con un vecchio computer
 
-You can host yourself at home with an ARM board or a re-purposed regular computer, connected to your home router/box.
+Puoi fare self-hosting in proprio, con una scheda ARM o con un vecchio computer, connesso con il tuo router.
 
-- **Pros**  : you will have physical control of the machine and only need to buy the hardware;
-- **Cons**  : you will have to [manually configure your internet box](/install/post_install/isp_box_config) and [might be limited by your ISP](/install/providers/isp/).
+- **Pro**: avrai un controllo fisico sulla macchina e avrai bisogno solo di acquistare il materiale per iniziare;
+- **Contro**: dovrai [configurare manualmente il router](/install/post_install/isp_box_config) e probabilmente ci saranno dei [limiti rispetto al tuo fornitore di accesso a internet](/install/providers/isp/)
 
-## At home, behind a VPN
+### In casa, dietro una VPN
 
-A VPN is an encrypted tunnel between two machines. In practice, it makes it "as if" you were directly, locally, connected to your server machine, but actually from somewhere else on the Internet. This allows you to still host yourself at home, while bypassing possible limitations of your ISP. See also [the Internet Cube project](https://internetcu.be/) and [the FFDN](https://www.ffdn.org/).
+Una VPN è un tunnel criptato tra due macchine. In pratica permette di avere una macchina «come se» fosse connessa ad un'altra. Questa soluzione permette di fare self-hosting a casa aggirando i limiti del fornitore di accesso a internet. Vedi anche il [progetto Brique Internet](https://labriqueinter.net) e [FFDN](https://www.ffdn.org).
 
-- **Pros**: you will have physical control of the machine, and the VPN hides your traffic from your ISP and allows you to bypass its limitations;
-- **Cons**: you will have to pay a monthly subscription for the VPN.
+- **Pro**: avrai un controllo fisico sulla macchina e la VPN ti permetterà di nascondere il traffico al tuo ISP e ti permetterà di bypassare le sue limitazioni.
+- **Contro**: dovrai pagare un canone mensile per la VPN.
 
-## On a remote server (VPS or dedicated server)
+### Su un server distante (VPS o server dedicato)
 
-You can rent a virtual private server or a dedicated machine from [associative](https://db.ffdn.org/) or [commercial](/install/providers/servers) "Cloud" providers.
+Puoi affittare un server virtuale privato o un macchina dedicata da fornitori "Cloud" come [associazioni](https://db.ffdn.org) o [commerciali](/providers/server)
 
-- **Pros**: your server and its internet connectivity will be fast;
-- **Cons**: you will have to pay a monthly subscription and won't have physical control of your server.
+- **Pro**: il tuo server e la connessione saranno veloci;
+- **Contro**: dovrai pagare un canone mensile per la macchina e non avrai il controllo fisico del tuo server.
 
-## Summary
+### Sommario
 
 export const styleNone = {
   textAlign: 'center',
