--- a/i18n/ru/docusaurus-plugin-content-docs/current/02.install/index.mdx
+++ b/i18n/ru/docusaurus-plugin-content-docs/current/02.install/index.mdx
@@ -2,30 +2,30 @@ import Link from '@docusaurus/Link';
 
 # Choose your selfhosting method and providers
 
-You can host yourself at home (on a small computer), or on a remote server. Each solution has their pros and cons:
+Вы можете разместить его у себя дома (на небольшом компьютере) или на удаленном сервере. У каждого решения есть свои плюсы и минусы:
 
-## At home, for instance on an ARM board or an old computer
+### Дома, например, на плате ARM или старом компьютере
 
-You can host yourself at home with an ARM board or a re-purposed regular computer, connected to your home router/box.
+Вы можете запустить YunoHost у себя дома с помощью платы ARM или переоборудованного обычного компьютера, подключенного к вашему домашнему роутеру.
 
-- **Pros**  : you will have physical control of the machine and only need to buy the hardware;
-- **Cons**  : you will have to [manually configure your internet box](/install/post_install/isp_box_config) and [might be limited by your ISP](/install/providers/isp/).
+- **Плюсы** : у вас будет физический контроль над машиной, и вам нужно будет только купить оборудование;
+- **Минусы** : вам придется [вручную настроить свой роутер](/install/post_install/isp_box_config) и [возможные ограничения вашим провайдером](/install/providers/isp/).
 
-## At home, behind a VPN
+### Дома, используя VPN
 
-A VPN is an encrypted tunnel between two machines. In practice, it makes it "as if" you were directly, locally, connected to your server machine, but actually from somewhere else on the Internet. This allows you to still host yourself at home, while bypassing possible limitations of your ISP. See also [the Internet Cube project](https://internetcu.be/) and [the FFDN](https://www.ffdn.org/).
+VPN - это зашифрованный туннель между двумя компьютерами. На практике это делает все "как если бы" вы были напрямую, локально, подключены к своему серверному компьютеру, но на самом деле откуда-то еще в Интернете. Это позволяет вам по-прежнему разместить сервер у себя дома, обходя возможные ограничения вашего интернет-провайдера. Смотрите также [проект Internet Cube](https://internetcu.be/) и [FFDN](https://www.ffdn.org/).
 
-- **Pros**: you will have physical control of the machine, and the VPN hides your traffic from your ISP and allows you to bypass its limitations;
-- **Cons**: you will have to pay a monthly subscription for the VPN.
+- **Плюсы** : у вас будет физический контроль над машиной, а VPN скрывает ваш трафик от вашего интернет-провайдера и позволяет вам обойти его ограничения;
+- **Минусы** : вам придется оплатить ежемесячную подписку на VPN.
 
-## On a remote server (VPS or dedicated server)
+### На удалённом сервере (VPS или выделенный)
 
-You can rent a virtual private server or a dedicated machine from [associative](https://db.ffdn.org/) or [commercial](/install/providers/servers) "Cloud" providers.
+Вы можете арендовать виртуальный частный сервер (VPS) или выделенную машину у [ассоциации](https://db.ffdn.org/) или [коммерческие](/providers/server) облачные провайдеры.
 
-- **Pros**: your server and its internet connectivity will be fast;
-- **Cons**: you will have to pay a monthly subscription and won't have physical control of your server.
+- **Плюсы** : ваш сервер и его подключение к Интернету будут быстрыми;
+- **Минусы** : вам придется платить ежемесячно за сервер и у вас не будет физического контроля над вашим сервером.
 
-## Summary
+### Суммарно
 
 export const styleNone = {
   textAlign: 'center',
