--- a/i18n/de/docusaurus-plugin-content-docs/current/02.install/40.post_install/10.finding_the_local_ip.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/02.install/40.post_install/10.finding_the_local_ip.mdx
@@ -5,19 +5,21 @@ title: Finding your server's local IP
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-On an installation at home, your server should typically be accessible using the `yunohost.local` domain. If for any reason this does not work, you may need to find the *local* IP of your server.
+Bei einer Installation zu Hause sollte Ihr Server normalerweise über die Domäne`yunohost.local` erreichbar sein. Wenn dies aus irgendeinem Grund nicht funktioniert, müssen Sie möglicherweise die *lokale* IP-Adresse Ihres Servers ermitteln.
 
-## What is a local IP ?
+## Was ist eine lokale IP ?
 
-The local IP is the address used to refer to your server inside the local network (typically your home) where multiple devices are connected to a router (your internet box). The local IP typically looks like `192.168.x.y` (or sometimes `10.0.x.y` or `172.16.x.y`)
+Die lokale IP-Adresse ist die, die verwendet wird, um auf Ihren Server innerhalb des lokalen Netzwerks (typischerweise Ihr Zuhause) zu verweisen, wo mehrere Geräte an einem Router (Ihre Internetbox) angeschlossen sind. Die lokale IP-Adresse sieht typischerweise so aus `192.168.x.y` (oder manchmal `10.0.x.y` oder `172.16.x.y`)
 
-## How to find it ?
+## Wie findet man sie?
 
-Any of these tricks should allow you to find the local IP of your server:
+Jeder dieser Tricks sollte es Ihnen ermöglichen, die lokale IP-Adresse Ihres Servers zu finden:
+[ui-tabs position="top-left" active="0" theme="lite"]
+[ui-tab title="(Empfohlen) Mit Angry IP Scanner"]
 
 <Tabs>
 <TabItem value="angryip" label="With AngryIP (Recommended)" default>
-You can use the [AngryIP](https://angryip.org/download/) software to achieve that. You just need to scan these local ip ranges in this order until you find the active IP corresponding to your server:
+Verwenden Sie dazu die [AngryIP](https://angryip.org/download/) Software. Sie brauchen nur diese lokalen IP-Bereiche in dieser Reihenfolge durchsuchen, bis Sie die aktive IP-Adresse finden, die Ihrem Server entspricht:
 
 - `192.168.0.0` -> `192.168.0.255`
 - `192.168.1.0` -> `192.168.1.255`
@@ -26,42 +28,42 @@ You can use the [AngryIP](https://angryip.org/download/) software to achieve tha
 - `172.16.0.0` -> `172.31.255.255`
 
 :::tip
-- you can order by ping like on this screenshot to easily see effectively-used IP.
-- your server should typically be displayed as listening on port 80 and 443
-- in case of doubt, just type `https://192.168.x.y` in your browser to check if it's a YunoHost or not.
+- Die Reihenfolge nach Ping festlegen, um die effektiv genutzten IP-Adressen zu sehen, wie unten agegeben.
+- Ihr Server sollte normalerweise auf Port 80 und 443 als lauschend angezeigt werden
+- im Zweifelsfall, einfach `https://192.168.x.y` in Ihrem Browser eingeben, um zu prüfen, ob es sich um YunoHost handelt.
 :::
 
 ![](/img/angryip.png)
 </TabItem>
 
-<TabItem value="router" label="With your internet router / box">
-Connect to your internet box / router interface to list the machines connected.
+<TabItem value="router" label="Mit Ihrem internet-Router / box">
+Benutzen Sie die Schnittstelle Ihrer Internet-Box / Ihres Routers, um die angeschlossenen Geräte aufzulisten
 </TabItem>
 
 <TabItem value="arp-scan" label="With arp-scan">
-If you're using Linux, you can open a terminal and use `sudo arp-scan --local` to list the IP on your local network (this may also work in Windows);
+Wenn Sie Linux verwenden, können Sie ein Terminal öffnen und den Befehl `sudo arp-scan --local`werwenden, um die IP-Adressen in Ihrem lokalen Netzwerk aufzulisten (dies kann auch unter Windows funktionieren);
 
-If the `arp-scan` command displays a confusing number of devices, you can check which ones are open to SSH with `nmap -p 22 192.168.1.0/24` to sort them out (adapt the IP range to your local network)
+Wenn der Befehl `arp-scan` viele Geräte anzeigt, können Sie dann mit dem Befehl `nmap -p 22 192.168.1.0/24` prüfen, welche Geräte für SSH offen sind, um sie auszusortieren (passen Sie den IP-Bereich an Ihr lokales Netzwerk an)
 </TabItem>
 
 <TabItem value="direct" label="With a direct access on the server">
-Plug a screen on your server, log in and type `hostname --all-ip-address`.
+Bildschirm auf den Server anschliessen, sich einloggen und diesen Befehl eingeben`hostname --all-ip-address`.
 
-The default credentials (before post-installation!) to log in are:
+Die Standard-Anmeldedaten (vor der Nachinstallation!) zum Einloggen sind:
 
 - login: `root`
 - password: `yunohost`
 
-(If you are using a raw Armbian image instead of the pre-installed YunoHost image, the credentials are root / 1234)
+(Wenn Sie ein rohes Armbian-Image anstelle des vorinstallierten YunoHost-Images verwenden, lauten die Anmeldedatenen root / 1234)
 </TabItem>
 
 </Tabs>
 
-## I still can't find my local IP
+## Ich kann meine lokale IP-Adresse immer noch nicht finden
 
-If you are unable to find your server using any of the previous tricks, maybe your server did not boot correctly:
+Wenn Sie Ihren Server mit keinem der vorherigen Tricks finden können, ist Ihr Server möglicherweise nicht richtig gebootet worden:
 
-- Make sure that your server is properly plugged in;
-- If you're using an SD card, make sure the connector is not too dusty;
-- Plug a screen on your server and try to reboot to check that it's properly booting;
-- Make sure that your ethernet cable is working and properly plugged in;
+- Vergewissern Sie sich, dass Ihr Server richtig eingesteckt ist;
+- Wenn Sie eine SD-Karte verwenden, stellen Sie sicher, dass der Elektroanschluss nicht staubig ist;
+- Schließen Sie einen Bildschirm an Ihren Server an und versuchen Sie, ihn neu zu starten, um zu prüfen, ob er ordnungsgemäß hochfährt;
+- Vergewissern Sie sich, dass das Ethernet-Kabel funktioniert und richtig eingesteckt ist;
