--- a/i18n/it/docusaurus-plugin-content-docs/current/02.install/40.post_install/10.finding_the_local_ip.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/02.install/40.post_install/10.finding_the_local_ip.mdx
@@ -5,19 +5,19 @@ title: Finding your server's local IP
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-On an installation at home, your server should typically be accessible using the `yunohost.local` domain. If for any reason this does not work, you may need to find the *local* IP of your server.
+Nel caso di un'installazione su un server casalingo, questi dovrebbe essere normalmente accessibile (dalla LAN) digitando l'indirizzo `yunohost.local`. Se per una qualsiasi ragione il server non è raggiungibile, dovrete trovare l'indirizzo IP *locale* del vostro server.
 
-## What is a local IP ?
+## Cos'è l'indirizzo IP locale?
 
-The local IP is the address used to refer to your server inside the local network (typically your home) where multiple devices are connected to a router (your internet box). The local IP typically looks like `192.168.x.y` (or sometimes `10.0.x.y` or `172.16.x.y`)
+L'IP locale è l'indirizzo che permette al server di essere raggiunto all'interno di una rete locale (ad esempio in una rete domestica) dove molti apparecchi si collegano allo stesso router . Un indirizzo IP locale è normalmente rappresentato con una sequenza di cifre del tipo `192.168.x.y` (o più raramente `10.0.x.y` oppure `172.16.x.y`)
 
-## How to find it ?
+## Come trovare l'indirizzo IP
 
-Any of these tricks should allow you to find the local IP of your server:
+Uno dei seguenti metodi, vi permetterà di trovare l'indirizzo IP locale del server.
 
 <Tabs>
 <TabItem value="angryip" label="With AngryIP (Recommended)" default>
-You can use the [AngryIP](https://angryip.org/download/) software to achieve that. You just need to scan these local ip ranges in this order until you find the active IP corresponding to your server:
+Potete utilizzare il programma [AngryIP](https://angryip.org/download/). Eseguite la scansione degli intervalli IP nell'ordine riportato di seguito fino a trovare l'indirizzo del vostro server:
 
 - `192.168.0.0` -> `192.168.0.255`
 - `192.168.1.0` -> `192.168.1.255`
@@ -26,42 +26,43 @@ You can use the [AngryIP](https://angryip.org/download/) software to achieve tha
 - `172.16.0.0` -> `172.31.255.255`
 
 :::tip
-- you can order by ping like on this screenshot to easily see effectively-used IP.
-- your server should typically be displayed as listening on port 80 and 443
-- in case of doubt, just type `https://192.168.x.y` in your browser to check if it's a YunoHost or not.
+- ordinate per ping come nell'immagine sotto per visualizzare gli indirizzi IP realmente attivi.
+- il vostro server dovrebbe essere visualizzato come in ascolto sulle porte 80 e 443
+- nel dubbio digitate in un browser `https://192.168.x.y` per verificare che abbiate raggiunto davvero il server YunoHost.
 :::
 
 ![](/img/angryip.png)
 </TabItem>
 
-<TabItem value="router" label="With your internet router / box">
-Connect to your internet box / router interface to list the machines connected.
+<TabItem value="router" label="Dal vostro modem/router">
+Cercate nella configurazione del vostro modem/router, troverete una sezione sugli indirizzi IP che il server DHCP ha assegnato alle varie macchine presenti in rete.
 </TabItem>
 
 <TabItem value="arp-scan" label="With arp-scan">
-If you're using Linux, you can open a terminal and use `sudo arp-scan --local` to list the IP on your local network (this may also work in Windows);
+Se utilizzate Linux, aprite il terminale e digitate il comando `sudo arp-scan --local` per elencare gli indirizzi IP in uso sulla vostra rete locale (dovrebbe funzionare anche con Windows);
 
-If the `arp-scan` command displays a confusing number of devices, you can check which ones are open to SSH with `nmap -p 22 192.168.1.0/24` to sort them out (adapt the IP range to your local network)
+Se il comando `arp-scan` restituisce un numero elevato di indirizzi, potere verificare quali di questi ha la porta SSH aperta con il comando `nmap -p 22 192.168.1.0/24` (usando l'insieme di indirizzi della vostra rete locale)
 </TabItem>
 
-<TabItem value="direct" label="With a direct access on the server">
-Plug a screen on your server, log in and type `hostname --all-ip-address`.
+<TabItem value="direct" label="Accesso diretto al server con uno schermo">
+Collegate uno schermo al server, effettuate il login e digitate `hostname --all-ip-address`.
 
-The default credentials (before post-installation!) to log in are:
+Le credenziali di default (prima della post installazione!) sono:
 
 - login: `root`
 - password: `yunohost`
 
-(If you are using a raw Armbian image instead of the pre-installed YunoHost image, the credentials are root / 1234)
+(Se utilizzate un'immagine Armbian grezza al posto di un immagine con YunoHost preinstallato, le credenziali saranno root / 1234)
+  
 </TabItem>
 
 </Tabs>
 
-## I still can't find my local IP
+## Se nonostante tutto non trovo l'indirizzo
 
-If you are unable to find your server using any of the previous tricks, maybe your server did not boot correctly:
+Se non riuscite a trovare il vostro server con le istruzioni precedenti, forse il server non si è avviato correttamente:
 
-- Make sure that your server is properly plugged in;
-- If you're using an SD card, make sure the connector is not too dusty;
-- Plug a screen on your server and try to reboot to check that it's properly booting;
-- Make sure that your ethernet cable is working and properly plugged in;
+- assicuratevi che il server sia correttamente alimentato;
+- se il vostro server utilizza un scheda SD assicuratevi che la porta sul server sia pulita;
+- collegate uno schermo al server e riavviatelo per assicurarvi che non vi siano messaggi di errore;
+- assicuratevi che il cavo ethernet sia di buona qualità e correttamente collegato;
