--- a/i18n/ru/docusaurus-plugin-content-docs/current/02.install/40.post_install/10.finding_the_local_ip.mdx
+++ b/i18n/ru/docusaurus-plugin-content-docs/current/02.install/40.post_install/10.finding_the_local_ip.mdx
@@ -5,19 +5,21 @@ title: Finding your server's local IP
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
-On an installation at home, your server should typically be accessible using the `yunohost.local` domain. If for any reason this does not work, you may need to find the *local* IP of your server.
+При установке дома ваш сервер, как правило, должен быть доступен с использованием домена `yunohost.local`. Если по какой-либо причине это не сработает, возможно, вам потребуется найти *локальный* IP-адрес вашего сервера.
 
-## What is a local IP ?
+## Что такое локальный IP-адрес ?
 
-The local IP is the address used to refer to your server inside the local network (typically your home) where multiple devices are connected to a router (your internet box). The local IP typically looks like `192.168.x.y` (or sometimes `10.0.x.y` or `172.16.x.y`)
+Локальный IP-адрес - это адрес, используемый для обращения к вашему серверу внутри локальной сети (обычно вашего дома), где несколько устройств подключены к маршрутизатору. Локальный IP-адрес обычно выглядит как `192.168.x.y` (или иногда `10.0.x.y` или `172.16.x.y`).
 
-## How to find it ?
+## Как его найти ?
 
-Any of these tricks should allow you to find the local IP of your server:
+Любой из этих приемов должен позволить вам найти локальный IP-адрес вашего сервера:
+[ui-tabs position="top-left" active="0" theme="lite"]
+[ui-tab title="(Рекомендуемый) используя AngryIP"]
 
 <Tabs>
 <TabItem value="angryip" label="With AngryIP (Recommended)" default>
-You can use the [AngryIP](https://angryip.org/download/) software to achieve that. You just need to scan these local ip ranges in this order until you find the active IP corresponding to your server:
+Вы можете использовать [AngryIP](https://angryip.org/download/) для достижения этой цели. Вам просто нужно сканировать эти локальные диапазоны ip-адресов в таком порядке, пока вы не найдете активный IP-адрес, соответствующий вашему серверу:
 
 - `192.168.0.0` -> `192.168.0.255`
 - `192.168.1.0` -> `192.168.1.255`
@@ -26,42 +28,42 @@ You can use the [AngryIP](https://angryip.org/download/) software to achieve tha
 - `172.16.0.0` -> `172.31.255.255`
 
 :::tip
-- you can order by ping like on this screenshot to easily see effectively-used IP.
-- your server should typically be displayed as listening on port 80 and 443
-- in case of doubt, just type `https://192.168.x.y` in your browser to check if it's a YunoHost or not.
+- вы можете сделать отсортировать по ping, как показано на этом скриншоте, чтобы легко увидеть используемый IP.
+- обычно ваш сервер должен отображаться как прослушивающий на портах 80 и 443
+- в случае сомнений просто введите `https://192.168.x.y` в вашем браузере, чтобы проверить, является ли это YunoHost или нет.
 :::
 
 ![](/img/angryip.png)
 </TabItem>
 
-<TabItem value="router" label="With your internet router / box">
-Connect to your internet box / router interface to list the machines connected.
+<TabItem value="router" label="С вашим интернет-маршрутизатором">
+Подключитесь к интерфейсу вашего маршрутизатора, чтобы просмотреть список подключенных компьютеров.
 </TabItem>
 
 <TabItem value="arp-scan" label="With arp-scan">
-If you're using Linux, you can open a terminal and use `sudo arp-scan --local` to list the IP on your local network (this may also work in Windows);
+Если вы используете Linux, вы можете открыть терминал и использовать `sudo arp-scan --local`, чтобы вывести список IP-адресов в вашей локальной сети (это также может работать в Windows).;
 
-If the `arp-scan` command displays a confusing number of devices, you can check which ones are open to SSH with `nmap -p 22 192.168.1.0/24` to sort them out (adapt the IP range to your local network)
+Если команда `arp-scan` отображает непонятное количество устройств, вы можете проверить, какие из них открыты для SSH с помощью `nmap -p 22 192.168.1.0/24`, чтобы разобраться в них (адаптируйте диапазон IP к вашей локальной сети).
 </TabItem>
 
-<TabItem value="direct" label="With a direct access on the server">
-Plug a screen on your server, log in and type `hostname --all-ip-address`.
+<TabItem value="direct" label="С прямым доступом к серверу">
+Подключите экран к своему серверу, войдите в систему и введите `hostname --all-ip-address`.
 
-The default credentials (before post-installation!) to log in are:
+Учетные данные по умолчанию (перед постустановкой!) для входа в систему:
 
-- login: `root`
-- password: `yunohost`
+- логин: `root`
+- пароль: `yunohost`
 
-(If you are using a raw Armbian image instead of the pre-installed YunoHost image, the credentials are root / 1234)
+(Если вы используете необработанный образ Armbian вместо предустановленного образа YunoHost, учетные данные - root / 1234)
 </TabItem>
 
 </Tabs>
 
-## I still can't find my local IP
+## Я все еще не могу найти свой локальный IP-адрес
 
-If you are unable to find your server using any of the previous tricks, maybe your server did not boot correctly:
+Если вы не можете найти свой сервер, используя какой-либо из предыдущих приемов, возможно, ваш сервер загрузился неправильно:
 
-- Make sure that your server is properly plugged in;
-- If you're using an SD card, make sure the connector is not too dusty;
-- Plug a screen on your server and try to reboot to check that it's properly booting;
-- Make sure that your ethernet cable is working and properly plugged in;
+- Убедитесь, что ваш сервер правильно подключен;
+- Если вы используете SD-карту, убедитесь, что разъем не слишком запылился;
+- Подключите экран к вашему серверу и попробуйте перезагрузиться, чтобы проверить, правильно ли он загружается;
+- Убедитесь, что ваш кабель Ethernet исправен и правильно подключен;
